# Fast-F1

./: .buildinfo  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  VERSION.txt  api.html  circuit_info.html  conftest.py  core.html  deprecated_for_reference.py  ergast.html  events.html  experimental.py  fastf1.html  genindex.html  howto_accurate_calculations.html  index.html  known_bugs.html  legacy.html  livetiming.html  logging.html  objects.inv  plotting.html  plotting_colormaps.html  py-modindex.html  pyproject.toml  pytest.ini  pyvenv.cfg  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  (+7 more)
.doctrees/: legacy.doctree  sg_execution_times.doctree
.doctrees/changelog/: index.doctree  v3.3.x.doctree
.doctrees/examples/: index.doctree
.doctrees/examples_gallery/: example_fastf1_signalrclient.doctree  index.doctree  plot_annotate_corners.doctree  plot_annotate_speed_trace.doctree  plot_driver_laptimes.doctree  plot_gear_shifts_on_track.doctree  plot_laptimes_distribution.doctree  plot_position_changes.doctree  plot_qualifying_results.doctree  plot_results_tracker.doctree  plot_speed_on_track.doctree  plot_speed_traces.doctree  plot_strategy.doctree  plot_team_pace_ranking.doctree  plot_who_can_still_win_wdc.doctree  sg_execution_times.doctree
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/ISSUE_TEMPLATES/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check_ai_disclosure.yml  check_nat.yml  docs.yml  docs_ext_deploy.yml  publish_docs.yml  release.yml  selective_cache_persist.yml  semver-test.yml  semver_test.yml  tests.yml
_downloads/0a5c733250f5b4af9640b55a1314174a/: plot_team_pace_ranking.ipynb
_downloads/1dfee3a290b9b94a083593b6e84f28ed/: example_fastf1_signalrclient.ipynb
_downloads/1e816b2d01e24c7de9571ba3453e23a6/: plot_annotate_corners.ipynb
_downloads/449af2b0fb5bedd44293b357fd049e05/: example_fastf1_signalrclient.py
_downloads/46052dbe7c8845b29e33cd01a67526a6/: plot_driver_laptimes.ipynb
_downloads/4971a27b54922abf8cdcd5851ac4942e/: plot_results_tracker.py
_downloads/5bfcf6cfc2c01ca172d637604f1c179c/: plot_team_pace_ranking.py
_downloads/5d66631092eaa2bacc03b4e024a19369/: plot_laptimes_distribution.ipynb
_downloads/608848dbf66a5724cfe9bb9663aea359/: plot_team_pace_ranking.py
_downloads/6516fcefe0d85cc90483c7b2678a9ef1/: plot_annotate_speed_trace.ipynb
_downloads/6c40f4dd715557c3d6b53e7f8c663286/: plot_gear_shifts_on_track.ipynb
_downloads/7c8cb7b44d772792f6015cec7d4d6394/: plot_driver_laptimes.py
_downloads/7fe65ff690cd6776170c69eacecca771/: plot_speed_traces.ipynb
_downloads/8869fe1a8288d64359b94269474d1bd8/: plot_speed_on_track.ipynb
_downloads/8fba57e756d751feba8e5bfcb4b78ffb/: plot_team_pace_ranking.ipynb
_modules/: index.html
_sources/: sg_execution_times.rst.txt
_static/: documentation_options.js
changelog/: index.html  previous.html  v1.5.1.html  v2.0.0.html  v2.0.1.html  v2.0.2.html  v2.1.0.html  v2.1.1.html  v2.1.10.html  v2.1.11.html  v2.1.12.html  v2.1.13.html  v2.1.2.html  v2.1.3.html  v2.1.4.html  v2.1.5.html  v2.1.6.html  v2.1.7.html  v2.1.8.html  v2.1.9.html  v2.2.0.html  v2.2.1.html  v2.2.2.html  v2.2.3.html  v2.2.4.html  v2.2.5.html  v2.2.6.html  v2.2.7.html  v2.2.8.html  v2.2.9.html  v2.3.0.html  v2.3.1.html  v2.3.2.html  v3.0.x.html  v3.1.x.html  v3.2.x.html  v3.3.x.html  v3.4.x.html
contributing/: coding_guide.html  contributing.html  devenv_setup.html  documenting_fastf1.html  index.html  testing.html
docs/: Makefile  ai_policy.md  api.rst  cache.rst  changelog.rst  circuit_info.rst  conditions.rst  conf.py  core.rst  ergast.rst  events.rst  experimental.rst  f1telemetry.rst  fastf1.rst  func.rst  howto_accurate_calculations.rst  index.rst  known_bugs.rst  legacy.rst  livetiming.rst  logging.rst  make.bat  plotting.rst  plotting_colormaps.rst  selectors.rst  setup_versioning.sh  syncsolver.rst  time_explanation.rst  track.rst  troubleshooting.rst  utils.rst
examples/: README.rst  basics.html  examplePick_fastest().py  example_fastf1_interactive_graph.py  example_fastf1_signalrclient.py  example_of_pick_fastest.py  example_pick_fastest.py  example_signalr_connection.py  index.html  plot_animated_lap.py  plot_annotate_corners.py  plot_annotate_speed_trace.py  plot_driver_laptimes.py  plot_driver_styling.py  plot_gear_shifts_on_track.py  plot_laptimes_distribution.py  plot_position_changes.py  plot_qualifying_results.py  plot_results_tracker.py  plot_season_summary.py  plot_speed_on_track.py  plot_speed_traces.py  plot_strategy.py  plot_team_pace_ranking.py  plot_who_can_still_win_wdc.py  results_tracker.html
examples_gallery/: example_fastf1_signalrclient.html  index.html  plot_annotate_corners.html  plot_annotate_speed_trace.html  plot_driver_laptimes.html  plot_gear_shifts_on_track.html  plot_laptimes_distribution.html  plot_position_changes.html  plot_qualifying_results.html  plot_results_tracker.html  plot_speed_on_track.html  plot_speed_traces.html  plot_strategy.html  plot_team_pace_ranking.html  plot_who_can_still_win_wdc.html  sg_execution_times.html
f1telemetry/: __init__.py  api.py  core.py  ergast.py  plots.py
fastf1/: .api.py.swo  __init__.py  __main__.py  _api.py  _utils.py  api.py  cache.py  core.py  debug_driver_info.py  ergast.py  events.py  exceptions.py  f1_to_hf.py  func.py  legacy.py  logger.py  ml_utils.py  plots.py  plotting.py  req.py  selectors.py  track.py  utils.py  version.py  vettel_test_2020_21_03.csv
requirements/: dev.txt  doc-build.txt  minver.txt
scripts/: activate  activate.bat  flake8_line_length.py  resync.py  run_solver.py  tools.py  visualization.py
tests/: manual_test_all.py  reference_values.py  test_cache.py  test_example_plots.py  test_experimental.py  test_input_data_handling.py  test_laps.py  test_laps_summary.py  test_plotting.py  test_requirements.txt  test_telemetry.py  test_time_pos_interpolation.py
(+289 files in other folders)
