[project]
dynamic = ["version"]

name = "fastf1"
authors = [
  {email = "oehrly@mailbox.org"},
  {name = "Philipp Schaefer"}
]
description = "Python package for accessing and analyzing Formula 1 results, schedules, timing data and telemetry."
readme = "README.md"

license = { file = "LICENSE" }

# minimum python version additionally needs to be changed in the test matrix
requires-python = ">=3.8"
# minimum package versions additionally need to be changed in requirement/minver.txt
dependencies = [
  "matplotlib>=3.5.1,<4.0.0",
  "numpy>=1.21.5,<2.0.0",
  "pandas>=1.3.5,<2.1.0",
  "python-dateutil",
  "requests>=2.28.1",
  "requests-cache>=0.8.0",
  "scipy>=1.7.3,<2.0.0",
  "thefuzz",
  "timple>=0.1.6",
  "websockets>=10.3",
]

[project.urls]
"Source Code" = "https://github.com/theOehrly/Fast-F1"
"Documentation" = "https://docs.fastf1.dev"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["fastf1*"]
exclude = ["fastf1/testing*"]
namespaces = false

[tool.setuptools_scm]
version_file = "fastf1/_version.py"
version_scheme = "release-branch-semver"
#local_scheme = "no-local-version"
fallback_version = "0.0+UNKNOWN"

[tool.ruff]
line-length = 79
select = [
#    "D", TODO: select and fix docstrings
    "E",
    "F",
    "W",
]
exclude = [
  "scripts",
  "fastf1/tests",
  "fastf1/testing",
  "fastf1/signalr_aio",
  "fastf1/legacy.py",
]

[tool.ruff.per-file-ignores]
"fastf1/_api.py" = ["E501"]
