[project]
dynamic = ["version"]

name = "fastf1"
authors = [
  {email = "oehrly@mailbox.org"},
  {name = "Philipp Schaefer"}
]
description = "Python package for accessing and analyzing Formula 1 results, schedules, timing data and telemetry."
readme = "README.md"

license = { file = "LICENSE" }

# minimum python version additionally needs to be changed in the test matrix
requires-python = ">=3.9"
# minimum package versions additionally need to be changed in requirements/minver.txt
dependencies = [
  "matplotlib>=3.5.1,<4.0.0",
  "numpy>=1.23.1,<3.0.0",
  "pandas>=1.4.1,<3.0.0",
  "python-dateutil",
  "requests>=2.28.1",
  "requests-cache>=1.0.0",
  "scipy>=1.8.1,<2.0.0",
  "rapidfuzz",
  "timple>=0.1.6",
  "websockets>=10.3,<14",
]

[project.urls]
"Source Code" = "https://github.com/theOehrly/Fast-F1"
"Documentation" = "https://docs.fastf1.dev"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "fastf1/**",
]
exclude = [
  "fastf1/tests/**",
  "fastf1/testing/**",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "fastf1/**",
  "requirements/**",
  "examples/**"
]
exclude = [
  "fastf1/tests/**",
  "fastf1/testing/**",
]

[tool.hatch.build.hooks.vcs]
version-file = "fastf1/_version.py"

[tool.hatch.version.raw-options]
# configures setuptools_scm within the hatchling build backend
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"  # needed for PyPI support for dev releases; hatch-vcs ignores setuptools_scm overrides through env vars
fallback_version = "0.0+UNKNOWN"

[tool.ruff]
line-length = 79
exclude = [
  "scripts",
  "fastf1/tests",
  "fastf1/testing",
  "fastf1/signalr_aio",
  "fastf1/legacy.py",
]

[tool.ruff.lint]
select = [
#    "D", TODO: select and fix docstrings
    "E",
    "F",
    "W",
    "UP",
    "NPY201"
]

[tool.ruff.lint.per-file-ignores]
"fastf1/_api.py" = ["E501"]

[tool.isort]
skip = ["docs/**"]
multi_line_output = 3
force_grid_wrap = 2
lines_after_imports = 2
