[metadata]
name =  fastf1
license = MIT
license_files = LICENSE
author = Oehrly
author_email = oehrly@mailbox.org
home_page = https://github.com/theOehrly/Fast-F1
description = Wrapper library for F1 data and telemetry API with additional data processing capabilities.
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
packages =
  fastf1
  fastf1.ergast
  fastf1.internals
  fastf1.livetiming
  fastf1.mvapi
  fastf1.signalr_aio
  fastf1.signalr_aio.events
  fastf1.signalr_aio.hubs
  fastf1.signalr_aio.transports

python_requires = >= 3.8
install_requires =
  requests-cache>=0.8.0
  pandas>=1.2.4,<3.0.0
  numpy>=1.20.3,<2.0.0
  scipy>=1.6.3,<2.0.0
  thefuzz
  matplotlib>=3.4.2,<4.0.0
  python-dateutil
  timple>=0.1.6
  requests>=2.28.0
  websockets>=8.1


[build_sphinx]
project = Fast F1
source-dir = ./docs
build-dir = ./docs/_build

[flake8]
max-line-length = 120
extend-ignore = W503
extend-select = W504
exclude = fastf1/signalr_aio
